<resources>
    <string name="app_name">GeoConfess</string>
    <string name="title_activity_login">GeoConfess</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant</string>
    <string name="surname">Nom</string>
    <string name="name">Prénom</string>
    <string name="email">Adresse mail</string>
    <string name="phone">Téléphone</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="prompt_password">Mot de passe</string>
    <string name="gmail_string">S\'identifier avec Google</string>
    <string name="facebook_string">S\'identifier avec Facebook</string>
    <string name="forgot_password">Mot de passe oublie ?</string>
    <string name="signup">S\'inscrire sur Geoconfess</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Service Tracking Toasts-->
    <string name="service_start_toast_message">Merci d’avoir activé la géolocalisation! Vous recevrez une notification dès qu’un pénitent vous enverra une demande de confession.</string>

</resources>
